--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Preload the LCP image with a high fetchpriority so it starts loading with the stylesheet. -->
+    <link rel="preload" fetchpriority="high" as="image" href="../src/assets/images/homeCenterVector.png" type="image/webp" />
+
+
     <title>Online Shop</title>
   </head>
   <body>
